upgrade spotless and code format version. Add instruction for spotless and JDK17.